# kata_bst_client_server

./: .gitignore  Makefile  README.md  lizardfs-cgi_0.0.0-20230630-213815-devel_amd64.deb
include/: BST.h  ClientModel.h  Node.h  ServerModel.h
src/: BST.cpp  ClientModel.cpp  Node.cpp  ServerModel.cpp  client.cpp  server.cpp
tests/: BSTTest.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
